Static files and add Bootstrap. Created asign paneal and main working window

--- a/django_learn/main/templates/main/about.html
+++ b/django_learn/main/templates/main/about.html
@@ -3,6 +3,9 @@
 {% block title %}About Page{% endblock %}
 
 {% block content %}
-    <h1>About page</h1>
-    <p>About page</p>
+    <div class="features">
+        <h1>About As</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, numquam totam? Amet commodi, deleniti distinctio fuga fugiat impedit itaque magni nostrum numquam omnis optio pariatur possimus reprehenderit totam vel vitae?</p>
+        <button class="btn btn-danger">Just push</button>
+    </div>
 {% endblock %}
