--- a/django_learn/main/templates/main/index.html
+++ b/django_learn/main/templates/main/index.html
@@ -3,7 +3,9 @@
 {% block title %}Main Page{% endblock %}
 
 {% block content %}
-    <h1>Main page</h1>
-    <p>Main page</p>
-    {% include 'main/test.html' %}
+    <div class="features">
+        <h1>Main Page</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, numquam totam? Amet commodi, deleniti distinctio fuga fugiat impedit itaque magni nostrum numquam omnis optio pariatur possimus reprehenderit totam vel vitae?</p>
+        <button class="btn btn-warning">To "About" page</button>
+    </div>
 {% endblock %}
