--- a/django_learn/main/templates/main/layout.html
+++ b/django_learn/main/templates/main/layout.html
@@ -1,3 +1,5 @@
+{% load static%}
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -5,12 +7,28 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'main/css/main.css'%}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+
         {% block title %} {% endblock %}
     </title>
 </head>
 <body>
-Привет
-    {% block content %} {% endblock %}
+    <aside>
+        <img src="{% static 'main/img/freepik.jpeg'%}" alt="fox">
+        <span class="logo">Django</span>
+        <h3>Navigation</h3>
+        <ul>
+            <a href="{% url 'home' %}"><li><i class="fas fa-home"></i> Home Page</li></a>
+            <a href="{% url 'about' %}"><li><i class="fas fa-solid fa-address-card"></i> About Us</li></a>
+            <a href=""><li><i class="fas fa-solid fa-address-book"></i> Contacts</li></a>
+        </ul>
+    </aside>
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
+
 </body>
 </html>
