--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -8,9 +8,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'main/css/main.css'%}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
-    <link rel="stylesheet" href="{% static 'main/css/main.css'%}">
+
 
 
         {% block title %}{{title}} {% endblock %}
@@ -26,6 +27,7 @@
             <a href="{% url 'about' %}"><li><i class="fas fa-solid fa-address-card"></i> About Us</li></a>
             <a href="{% url 'news_home' %}"><li><i class="fas fa-solid fa-newspaper"></i> News</li></a>
             <a href=""><li><i class="fas fa-regular fa-address-card"></i> Contacts</li></a>
+            <a href="{% url 'create' %}"><li><button class="btn btn-info"><i class="fas fa-plus-circle"></i> Add news</button></a></li>
         </ul>
     </aside>
     <main>
