--- a/news/templates/news/news_home.html
+++ b/news/templates/news/news_home.html
@@ -12,6 +12,7 @@
                 <h3>{{el.title}}</h3>
                 <p>{{el.anons}}</p>
                 <p>{{el.full_text}}</p>
+                <a href="{% url 'news-detail' el.id %}" class="btn btn-warning">Read full</a>
             </div>
         {% endfor %}
         {% else %}
